# synapse

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  create_all_files.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/api/: __init__.py  chat.py  documents.py  health.py  memory.py
app/core/: config.py  database.py  services.py
app/services/: __init__.py
examples/: basic_chat.py  mcp_tools.py  upload_docs.py
scripts/: init.sql
tests/: __init__.py  test_api.py
