[tool.poetry]
name = "synapse"
version = "0.1.0"
description = "Self-hosted AI backend for Cursor/Cline/Continue with persistent memory"
authors = ["Synapse Contributors"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/eagurin/synapse"
repository = "https://github.com/eagurin/synapse"
keywords = ["ai", "llm", "openai", "cursor", "cline", "memory", "rag"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.black]
line-length = 88
target-version = ['py310', 'py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api" 